<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Do It When Im There</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="itemdeleted">Item deleted</string>
    <string name="taptoundo">Tap to undo</string>
        <plurals name="countdown_seconds">
        <item quantity="one">Dismissing in 1...</item>
        <item quantity="other">Dismissing in %d...</item>
    </plurals>
    
    <string name="countdown_dismissing">Dismissing</string>
    
    <string name="undo">Undo</string>
    <string name="log_in">Log In</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="email_addres">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="notify_in_">"Notify in "</string>
    <string name="m_distance_from_here">m distance from here</string>
    <string name="off">Off</string>
    <string name="only_once">Only once</string>
    <string name="reminder_settings">Reminder Settings</string>
    <string name="select_">"Select "</string>
    <string name="please_enter_your_password">Please enter your Password</string>
    <string name="please_enter_your_user_name">Please enter your User name</string>
    <string name="user_name_or_password_is_incorrect">User name or password is incorrect</string>
    <string name="login_">Login...</string>
    <string name="todo_on_the_map">TODO On The Map</string>
    <string name="todo_list">TODO List</string>
    <string name="are_you_sure_you_want_to_exit_">are you sure you want to exit?</string>
    <string name="new_mission_was_created_">"New mission was created: "</string>
    <string name="locating_your_addres_">Locating your addres...</string>
    <string name="restoring_">Restoring...</string>
    <string name="backup_">Backup...</string>
    <string name="add_mission">Add Mission</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="reminder">Reminder</string>
    <string name="without_date_and_time">Without date and time</string>
    <string name="location">Location</string>
    <string name="notify_in_100_m_distance_from_the_location">Notify in 100 m distance from the location</string>
    <string name="create">Create</string>
    <string name="content">Content</string>
    <string name="locname">locName</string>
    <string name="do_it_when_i_m_there">Do It When I\'m There</string>

</resources>