<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:paddingLeft="10dp"
        android:textSize="40sp"
        android:paddingBottom="20dp"
        android:text="Log In"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/user_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/my_et_background"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@android:color/black" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/my_et_background"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:textColor="@android:color/white"
        android:gravity="center_horizontal"
        android:background="@drawable/blue_button"
        android:paddingTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/log_in" />

    <TextView
        android:id="@+id/signup_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/sign_up_now"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#043175"
        android:textStyle="bold" />

</LinearLayout>